Unit tests using Junit finally working omggg